# Peartrainer

./: .gitignore  CODE_OF_CONDUCT.md  README.md  README.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  ci.yml
src/peartrainer/: controller.py  global_vars.py  interval_training.py  main.py  main_menu.py
tests/: test_midi.py  test_peartrainer.py
