[tool.poetry]
name = "peartrainer"
version = "0.1.2"
description = "A musical ear trainer written in Python"
authors = ["Lars <lars@tüftelecke.de>"]

[tool.poetry.dependencies]
python = "^3.10"
python-rtmidi = "^1.4.9"
click = "^8.1.1"
inquirer = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.3.0"

[tool.poetry.scripts]
peartrainer = "peartrainer.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
